<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bakgnd"
        android:title="@string/bkgroind"
        android:icon="@android:drawable/ic_menu_gallery"/>
    <item
        android:id="@+id/Info_page"
        android:icon="@android:drawable/ic_menu_zoom"
        android:title="@string/infopage" />
    <group>
        <item android:title="@string/gmhistory"
            android:id="@+id/historygm"/>
        <item android:title="@string/information"
            android:id="@+id/info"/>
        <item android:title="@string/gmandroid"
            android:id="@+id/androidgm"/>
        <item android:title="@string/gmhuman"
            android:id="@+id/humangm"/>
    </group>
    <item
        android:id="@+id/settingactivity"
        android:icon="@android:drawable/ic_menu_zoom"
        android:title="@string/setting_Titel" />
    <item
        android:id="@+id/help"
        android:icon="@android:drawable/ic_menu_zoom"
        android:title="@string/help" />
</menu>