<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:hapticFeedbackEnabled="false"
    android:backgroundTint="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <TableRow
        android:id="@+id/tbrw0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/app_name" />
    </TableRow>

    <TableRow
        android:id="@+id/tbrw1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/winer2"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:text="@string/winer"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/winer"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:text="@string/gamename" />
    </TableRow>

    <TableRow
        android:id="@+id/tbr2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/bu1"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#FFFFFF"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bu2"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#FFFFFF"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bu3"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#FFFFFF"
            android:textAlignment="center"
            android:textSize="24sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tbrw3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/bu4"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#FFFFFF"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bu5"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#FFFFFF"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bu6"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#FFFFFF"
            android:textAlignment="center"
            android:textSize="24sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tbrw4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/bu7"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#FFFFFF"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bu8"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#FFFFFF"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bu9"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#FFFFFF"
            android:textAlignment="center"
            android:textSize="24sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tbrw5"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/restartbutton" />

    </TableRow>

    <TableRow
        android:id="@+id/tbrw6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Space
            android:layout_height="100dp"
            android:layout_weight="1" />
    </TableRow>
</TableLayout>
